--- a/AndroidStudioProjects/Todo/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/Todo/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">To do</string>
+    <string name="login">Login</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="Login">Login</string>
+    <string name="click_to_register">Click To Register</string>
+
 </resources>
