--- a/AndroidStudioProjects/Todo/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/Todo/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="enter_password">Enter Password</string>
     <string name="Login">Login</string>
     <string name="click_to_register">Click To Register</string>
+    <string name="register">Register</string>
+    <string name="enter_username">Enter Username</string>
+    <string name="click_to_login">Click To Login</string>
 
 </resources>
